--- a/checkpt1.html
+++ b/checkpt1.html
@@ -98,10 +98,20 @@ body, html {
             alt="">
             <br>
 
-        <input type="mail" name="mail" placeholder="enter your name">
-        <input type="number" placeholder="enter your number">
-        <input type="password" placeholder="enter your password"><br>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
+            <p>Lets get in touch. Send me a message:</p>
+            <form action="/action_page.php" target="_blank">
+              <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
+              <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Email" required name="Email"></p>
+              <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Subject" required name="Subject">
+              </p>
+              <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message" required name="Message">
+              </p>
+              <p>
+                <button class="w3-button w3-light-grey w3-padding-large" type="submit">
+                  <i class="fa fa-paper-plane"></i> SEND MESSAGE
+                </button>
+              </p>
+            </form>
 
     </div>
     
